syntax = "proto3";

package vn.co.abc.banking.proto;


option java_multiple_files = true;
option java_package = "vn.co.abc.banking.proto";

service VoucherController {
  rpc getVoucher(GetVoucherRequest) returns (GetVoucherResponse);
  rpc getVouchers(GetVouchersRequest) returns (GetVouchersResponse);
}

message GetVoucherRequest {
  string phoneNumber = 1;
  string transactionId = 2;
}

message GetVoucherResponse {
  int32 status = 1;
  VoucherInfo voucherInfo = 2;
}

message GetVouchersRequest {
  string phoneNumber = 1;
}

message GetVouchersResponse {
  int32 status = 1;
  repeated VoucherInfo voucherInfo = 2;
}

message VoucherInfo {
  string code = 1;
}